sign in spacing fixed

--- a/src/css/SignUpForm.css
+++ b/src/css/SignUpForm.css
@@ -14,6 +14,7 @@
 }
 .signup-title {
   margin-top: 0px;
+  margin-bottom: 0px;
   text-align: center;
   font-family: poppins;
   font-weight: 900;
@@ -66,7 +67,4 @@
 }
 .sign-in-link {
   text-decoration: none;
-}
-.error-top-container {
-  text-align: center;
 }
